name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      aeson                   >= 1.3     && < 1.5
    , barbies
    , base                    >= 4.10    && < 4.13
    , beam-core               >= 0.8     && < 0.9
    , beam-migrate            >= 0.4     && < 0.5
    , beam-sqlite             >= 0.4     && < 0.5
    , bytestring              >= 0.10.8  && < 0.11
    , cases                   >= 0.1     && < 0.2
    , common
    , containers              >= 0.5     && < 0.7
    , dependent-sum
    , directory               >= 1.3.0   && < 1.4
    , errors                  >= 2.3.0   && < 2.4
    , filepath
    , frontend
    , github                  >= 0.21    && < 0.22
    , github-webhooks         >= 0.10    && < 0.11
    , lens
    , lens-aeson              >= 1.0.2   && < 1.1
    , mtl                     >= 2.2.2   && < 2.3
    , obelisk-backend
    , obelisk-executable-config
    , obelisk-route
    , process
    , readable                >= 0.3.1   && < 0.4
    , rng-utils               >= 0.3     && < 0.4
    , scrub
    , shelly
    , snap-core               >= 1.0     && < 1.1
    , snap-server             >= 1.1     && < 1.2
    , sqlite-simple           >= 0.4.16  && < 0.5
    , stm
    , string-conv             >= 0.1.2   && < 0.2
    , template-haskell
    , text                    >= 1.2.3   && < 1.3
    , time                    >= 1.8.0   && < 1.9
    , transformers            >= 0.5.2   && < 0.6
    , vector                  >= 0.12.0  && < 0.13
    , websockets
    , websockets-snap
  exposed-modules:
    Backend
    Backend.Build
    Backend.Db
    Backend.Github
    Backend.Types.ConnRepo
    Backend.Types.ServerEnv
    Backend.WsCmds
    Backend.WsUtils
    Which
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  ghc-options: -threaded -Wall -O
  build-depends:
    aeson,
    ansi-wl-pprint,
    backend,
    base,
    beam-core,
    beam-sqlite,
    bytestring,
    common,
    directory,
    frontend,
    github,
    lens,
    mtl,
    obelisk-backend,
    optparse-applicative,
    rng-utils,
    snap-core,
    snap-server,
    sqlite-simple,
    stm,
    string-conv,
    text,
    time,
    transformers
