name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
      aeson                   >= 1.3     && < 1.5
    , amazonka
    , amazonka-core
    , amazonka-s3
    , barbies
    , base                    >= 4.10    && < 4.13
    , base16-bytestring       >= 0.1     && < 0.2
    , base64-bytestring       >= 1.0     && < 1.1
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring              >= 0.10.8  && < 0.11
    , cases                   >= 0.1     && < 0.2
    , common
    , containers              >= 0.5     && < 0.7
    , dependent-sum
    , directory               >= 1.3.0   && < 1.4
    , ed25519
    , errors                  >= 2.3.0   && < 2.4
    , filepath
    , foldl
    , frontend
    , github                  >= 0.21    && < 0.27
    , github-webhooks         >= 0.10    && < 0.11
    , http-client
    , http-client-tls         >= 0.3.5   && < 0.4
    , http-types              >= 0.12.1  && < 0.13
    , lens
    , lens-aeson              >= 1.0.2   && < 1.1
    , mtl                     >= 2.2.2   && < 2.3
    , network
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-route
    , process
    , readable                >= 0.3.1   && < 0.4
    , rng-utils               >= 0.3     && < 0.4
    , scrub
    , shelly
    , snap-core               >= 1.0     && < 1.1
    , snap-server             >= 1.1     && < 1.2
    , sqlite-simple           >= 0.4.16  && < 0.5
    , stm
    , string-conv             >= 0.1.2   && < 0.2
    , template-haskell
    , text                    >= 1.2.3   && < 1.3
    , tasty
    , tasty-hunit
    , time                    >= 1.8.0   && < 1.9
    , transformers            >= 0.5.2   && < 0.6
    , turtle
    , uri-bytestring          >= 0.3     && < 0.4
    , vector                  >= 0.12.0  && < 0.13
    , websockets
    , websockets-snap
    , which
  exposed-modules:
    Backend
    Backend.Build
    Backend.Cache
    Backend.CacheServer
    Backend.Common
    Backend.Db
    Backend.DbLib
    Backend.ExecutablePaths
    Backend.Github
    Backend.Gitlab
    -- Backend.Gitlab.Request
    Backend.Gitlab.Schema
    Backend.NixBase32
    Backend.Process
    Backend.Schedule
    Backend.Types.BackendSettings
    Backend.Types.ConnRepo
    Backend.Types.NixCacheKeyPair
    Backend.Types.ServerEnv
    Backend.WsCmds
    Backend.WsUtils
    Nix.Types
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  ghc-options: -threaded -Wall -O
  build-depends:
    aeson,
    ansi-wl-pprint,
    backend,
    base,
    beam-core,
    beam-sqlite,
    bytestring,
    common,
    directory,
    frontend,
    github,
    lens,
    mtl,
    obelisk-backend,
    optparse-applicative,
    rng-utils,
    snap-core,
    snap-server,
    sqlite-simple,
    stm,
    string-conv,
    tasty,
    tasty-hunit,
    text,
    time,
    transformers
