name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , base64-bytestring
    , beam-core
    , beam-migrate
    , bytestring
    , data-default
    , dependent-sum
    , directory
    , errors
    , lens
    , mtl
    , obelisk-executable-config
    , obelisk-route
    , readable
    , reflex-dom
    , scrub
    , string-conv
    , text
    , time
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
    Common.Types.BinaryCache
    Common.Types.CacheJob
    Common.Types.CachedHash
    Common.Types.CiSettings
    Common.Types.ConnectedAccount
    Common.Types.BuildJob
    Common.Types.Builder
    Common.Types.JobStatus
    Common.Types.NixCacheKeyPair
    Common.Types.ProcMsg
    Common.Types.Repo
    Common.Types.RepoBuildInfo
    Common.Types.S3Cache
    Humanizable
