name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      aeson
    , base
    , beam-core
    , bytestring
    , common
    , containers
    , data-default
    , dependent-sum
    , errors
    , ghcjs-dom
    , jsaddle
    , lens
    , lens-aeson
    , mtl
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , readable
    , ref-tf
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , scrub
    , semantic-reflex
    , text
    , time
    , transformers
    , universe
    , witherable
  exposed-modules:
    Frontend
    Frontend.App
    Frontend.AppState
    Frontend.Common
    Frontend.Nav
    Frontend.Widgets.Accounts
    Frontend.Widgets.Builders
    Frontend.Widgets.Caches
    Frontend.Widgets.Common
    Frontend.Widgets.Jobs
    Frontend.Widgets.Form
    Frontend.Widgets.Repos
    Frontend.Widgets.Settings
  ghc-options: -Wall

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -threaded
  if os(darwin)
     ghc-options: -dynamic
